[package]
name = "find_bgm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.2"
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
kuchiki = "0.8"
